--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>OONI VOLT 2 vs NINJA ARTISAN Electric Outdoor Pizza Oven - Review & Comparison</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">36 minutes ago</div>
+                        <div class="date">49 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -2338,7 +2338,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN GUESS THE WORD</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 19, 2025</div>
                     </div>
                 </a>
             </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>OONI VOLT 2 vs NINJA ARTISAN Electric Outdoor Pizza Oven - Review & Comparison</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">36 minutes ago</div>
+                            <div class="date">49 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -9803,7 +9803,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN GUESS THE WORD</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 19, 2025</div>
                         </div>
                     </a>
                 </div>
