--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>OONI VOLT 2 vs NINJA ARTISAN Electric Outdoor Pizza Oven - Review & Comparison</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Isha School Students’ Diwali Invitation for Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>How to Trade Futures (Step-by-Step for Beginners) 💡</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>What's The Best Month For Stocks?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Goodbye and Good Luck</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Why it takes years to trade profitably</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - The Focus of Consciousness</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>What Makes You A Family? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -372,9 +372,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=GeG_xYjSsgU" target="_blank">
-                    <img src="https://i.ytimg.com/vi/GeG_xYjSsgU/mqdefault.jpg" alt="Transform Your Day: 5 Simple Japanese habits for Your Calm & Positive Living">
+                    <img src="https://i.ytimg.com/vi/GeG_xYjSsgU/mqdefault.jpg" alt="5 Simple Japanese habits for Your Calm & Positive Living">
                     <div class="video-info">
-                        <h3>Transform Your Day: 5 Simple Japanese habits for Your Calm & Positive Living</h3>
+                        <h3>5 Simple Japanese habits for Your Calm & Positive Living</h3>
                         <div class="channel">Samurai Matcha</div>
                         <div class="date">Yesterday</div>
                     </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>How to Trade Futures (Step-by-Step for Beginners) 💡</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>What's The Best Month For Stocks?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5105,7 +5105,7 @@
                         <div class="video-info">
                             <h3>Goodbye and Good Luck</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5116,7 +5116,7 @@
                         <div class="video-info">
                             <h3>Why it takes years to trade profitably</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Isha School Students’ Diwali Invitation for Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7260,7 +7260,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - The Focus of Consciousness</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7282,7 +7282,7 @@
                         <div class="video-info">
                             <h3>What Makes You A Family? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8230,9 +8230,9 @@
         
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=GeG_xYjSsgU" target="_blank">
-                        <img src="https://i.ytimg.com/vi/GeG_xYjSsgU/mqdefault.jpg" alt="Transform Your Day: 5 Simple Japanese habits for Your Calm & Positive Living">
+                        <img src="https://i.ytimg.com/vi/GeG_xYjSsgU/mqdefault.jpg" alt="5 Simple Japanese habits for Your Calm & Positive Living">
                         <div class="video-info">
-                            <h3>Transform Your Day: 5 Simple Japanese habits for Your Calm & Positive Living</h3>
+                            <h3>5 Simple Japanese habits for Your Calm & Positive Living</h3>
                             <div class="channel">Samurai Matcha</div>
                             <div class="date">Yesterday</div>
                         </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>OONI VOLT 2 vs NINJA ARTISAN Electric Outdoor Pizza Oven - Review & Comparison</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
