--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Diwali Is a Scientific Process for Health | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>Don't Ban Firecrackers | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -7260,7 +7260,7 @@
                         <div class="video-info">
                             <h3>Diwali Is a Scientific Process for Health | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7282,7 +7282,7 @@
                         <div class="video-info">
                             <h3>Don't Ban Firecrackers | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
